--- a/wp-content/themes/bruden/assets/css/shop.css
+++ b/wp-content/themes/bruden/assets/css/shop.css
@@ -513,6 +513,11 @@
   top: 15px;
   left: 15px;
   z-index: 5;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.products .product:hover .onsale {
+  opacity: 1;
 }
 .products .product img {
   display: block;
