--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -568,6 +568,12 @@
             top: 15px;
             left: 15px;
             z-index: 5;
+            opacity: 0;
+            transition: opacity .3s;
+        }
+
+        &:hover .onsale {
+            opacity: 1;
         }
 
         img {
