--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -1243,6 +1243,14 @@ form.woocommerce-checkout {
             padding-left: 10px;
             font-size: 12px;
         }
+
+        a {
+            color: #000000;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
 
     .woocommerce-form-login {
@@ -1254,6 +1262,10 @@ form.woocommerce-checkout {
 
         .lost_password {
             margin-top: 10px;
+        }
+
+        a {
+            color: #000000;
         }
     }
 
