--- a/wp-content/themes/bruden/style.css
+++ b/wp-content/themes/bruden/style.css
@@ -1,9 +1,9 @@
 /* 
     Theme Name: bruden
     Theme URI: 
-    Author: Vlad Duhota
+    Author: Biramedia
     Author URI: 
-    Description: Responsive bruden WordPress theme development by Vlad duhota.
+    Description: Responsive bruden WordPress theme development by Biramedia.
     Version: 0.0.1
     Tested up to: 5.4
     Requires PHP: 7.1
