--- a/wp-content/themes/bruden/assets/css/shop.css
+++ b/wp-content/themes/bruden/assets/css/shop.css
@@ -1187,6 +1187,18 @@ form.woocommerce-checkout .button:hover {
 .woocommerce-account .woocommerce-form-login a {
   color: #000000;
 }
+.woocommerce-account .woocommerce-form-login a:hover {
+  text-decoration: underline;
+}
+.woocommerce-account .woocommerce-form-register .form-row + p {
+  margin-top: 10px;
+}
+.woocommerce-account .woocommerce-form-register a {
+  color: #000000;
+}
+.woocommerce-account .woocommerce-form-register a:hover {
+  text-decoration: underline;
+}
 .woocommerce-account .woocommerce-EditAccountForm,
 .woocommerce-account fieldset {
   display: flex;
