order success page fixed

--- a/wp-content/themes/bruden/assets/css/shop.css
+++ b/wp-content/themes/bruden/assets/css/shop.css
@@ -1100,6 +1100,12 @@ form.woocommerce-checkout .button:hover {
 .woocommerce-order .woocommerce-order-details {
   width: 50%;
 }
+@media (max-width: 992px) {
+  .woocommerce-order .woocommerce-order-overview,
+  .woocommerce-order .woocommerce-order-details {
+    width: 100%;
+  }
+}
 .woocommerce-order .woocommerce-order-details table {
   width: 100%;
 }
