--- a/wp-content/themes/bruden/assets/css/shop.css
+++ b/wp-content/themes/bruden/assets/css/shop.css
@@ -1220,3 +1220,7 @@ form.woocommerce-checkout .button:hover {
   background: transparent;
   color: #000000;
 }
+
+#yith-wcwl-popup-message {
+  padding: 0 !important;
+}
