--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -33,7 +33,7 @@
             @media(max-width:992px) {
                 margin-top: 20px;
             }
-            
+
             & > h2 {
                 margin-bottom: 30px;
             }
@@ -120,7 +120,7 @@
             @media(max-width:992px) {
                 font-size: 13px;
             }
-            
+
             li {
                 padding: 0 10px 15px;
                 position: relative;
@@ -208,7 +208,7 @@
     }
 
     .entry-summary {
-        
+
         h1 {
             font-weight: 400;
             font-size: 28px;
@@ -733,7 +733,7 @@
         border: 1px solid #000000;
         color: #000000;
     }
-        
+
     &.mobile {
 
         li {
@@ -765,7 +765,7 @@
 
             .additional-info-wrapper {
                 width: 50%;
-        
+
                 table.additional-info {
                     margin-left: auto;
 
@@ -826,7 +826,7 @@
             font-size: 18px !important;
         }
 
-        thead {    
+        thead {
             @media(max-width:992px) {
                 display: none;
             }
@@ -912,7 +912,7 @@
             width: 10%;
             font-size: 40px;
             text-align: center;
-            
+
             a {
                 color: #000;
             }
@@ -1053,7 +1053,7 @@
                 height: 36px;
             }
     }
-    
+
     .button {
         display: block;
         padding: 14px 25px;
@@ -1065,7 +1065,7 @@
         text-transform: capitalize;
         color: #FFFFFF;
         transition: background .3s, color .3s;
-        
+
         &:hover {
             background: transparent;
             color: #000000;
@@ -1085,7 +1085,7 @@ form.woocommerce-checkout {
             width: 100%;
             margin-top: 40px;
         }
-        
+
         .col-2 {
             margin-top: 20px;
         }
@@ -1167,7 +1167,7 @@ form.woocommerce-checkout {
             text-transform: uppercase;
         }
     }
-    
+
     .button {
         display: block;
         padding: 14px 25px;
@@ -1179,7 +1179,7 @@ form.woocommerce-checkout {
         text-transform: capitalize;
         color: #FFFFFF;
         transition: background .3s, color .3s;
-        
+
         &:hover {
             background: transparent;
             color: #000000;
@@ -1323,7 +1323,7 @@ form.woocommerce-checkout {
             }
         }
     }
-    
+
     .button {
         display: block;
         padding: 14px 25px;
@@ -1335,10 +1335,14 @@ form.woocommerce-checkout {
         text-transform: capitalize;
         color: #FFFFFF;
         transition: background .3s, color .3s;
-        
+
         &:hover {
             background: transparent;
             color: #000000;
         }
     }
+}
+
+#yith-wcwl-popup-message{
+    padding: 0 !important;
 }
