--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -1345,4 +1345,7 @@ form.woocommerce-checkout {
 
 #yith-wcwl-popup-message{
     padding: 0 !important;
+    div{
+        padding: 0 15px;
+    }
 }
